from core.player import Player

class Ranger(Player):
    hero_class = "Ranger"