from core.player import Player

class Warrior(Player):
    hero_class = "Guerrier"