from core.player import Player

class Wizard(Player):
    hero_class = "Mage"